--- a/buyinglist.html
+++ b/buyinglist.html
@@ -69,8 +69,8 @@
     </section>
 </article>
 <section class="buyinglistbtn">
-    <a class="buyinglistbtn1" href="buyinglist.html"><span></span><p>繼續選購</p></a>
-    <a class="buyinglistbtn2" href="store.html"><span></span><p>前往結帳</p></a>
+    <a class="buyinglistbtn1" href="store".html"><span></span><p>繼續選購</p></a>
+    <a class="buyinglistbtn2" href="buyinglist.html"><span></span><p>前往結帳</p></a>
 </section>
   <!-- 底端footer -->
   <footer class="bottom">
