--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul class="mainlist">
           <li><a href="about.html">鴞之匠心</a></li>
           <li><a href="store.html">精品商店</a></li>
-          <li><a href="#">登入/註冊</a></li>
+          <li><a class="loginnav" href="#">登入/註冊</a></li>
           <li><a href="usercenter.html">會員中心</a></li>
           <li><a href="faq.html">常見問題</a></li>
       </ul>
