--- a/faq.html
+++ b/faq.html
@@ -41,7 +41,7 @@
         <div class="anser">
                 <div class="ansbox"><label for="q2">產品證明與保固</label><span></span></div>
               <input type="radio" name="ans" id="q2">
-              <div class="anscontent">本店出品魔杖皆有透明且優質來原產地證明，詳見<a href="about.html">本店介紹</a></div>
+              <div class="anscontent">本店出品魔杖皆有透明且優質來原產地證明，詳見本店介紹。</div>
         </div>
         <div class="anser">
             <div class="ansbox"><label for="q3">退換貨流程</label><span></span></div>
