--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Owlet Wand Shop: About Us</title>
+    <title>About Us: Owlet Wand Shop</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -13,38 +13,47 @@
     </style>
 </head>
 <body>
-    <!-- 頂端nav -->
+  <!-- 頂端nav -->
   <nav class="head nav">
-      <a href="index.html" class="toplogo">
-          <img src="img/logo_ca_l.svg" alt="">
-      </a>
-      <ul class="mainlist">
-          <li><a href="about.html">鴞之匠心</a></li>
-          <li><a href="store.html">精品商店</a></li>
-          <li><a class="loginnav" href="#">登入/註冊</a></li>
-          <li><a href="usercenter.html">會員中心</a></li>
-          <li><a href="faq.html">常見問題</a></li>
-      </ul>
-      <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
-  </nav>
+    <a href="index.html">
+        <img src="img/logo_ca_l.svg" alt="">
+    </a>
+    <div class="nav_main">
+        <ul>
+            <li><a href="about.html">鴞之匠心</a></li>
+            <li><a href="store.html">精品商店</a></li>
+            <li><a class="loginnav" href="#">登入/註冊</a></li>
+            <li><a href="usercenter.html">會員中心</a></li>
+            <li><a href="faq.html">常見問題</a></li>
+        </ul>
+    </div>
+    <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+    <button type="button" class="hamburger">
+        <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+        </span>
+    </button>
+</nav>
+  <!-- login懸浮視窗 -->
+    <article class="loginbg"></article>
   <!-- top區塊 -->
-  <header class="abouttop">
+    <header class="abouttop">
         <img src="img/logo_14_s.svg" alt="">
         <h1>時往歲載陰</h1>
         <h1>千餘年屹立</h1>
         <div><p>since 666</p></div>
-  </header>
+    </header>
   <!-- 第一區塊 -->
-  <section class="aboutone">
-      <div>
-        <h2>萬年原生木 坐擁千坪林</h2>
-        <p>本店擁有佔地達1,600坪廣闊樹木林，原始森林推測樹齡最高達萬年。<br>林內涵蓋寒帶、溫帶、熱帶及地中海型氣候樹種，市面上常見與少見的魔杖樹木原料皆可於此找到蹤跡。</p>
-      </div>
-      <a href="about.html"><span></span><p>了解詳情</p></a>
-      <div class="aboutonepic"></div>
-  </section>
+    <section class="aboutone">
+        <div>
+          <h2>萬年原生木 坐擁千坪林</h2>
+          <p>本店擁有佔地達1,600坪廣闊樹木林，原始森林推測樹齡最高達萬年。<br>林內涵蓋寒帶、溫帶、熱帶及地中海型氣候樹種，市面上常見與少見的魔杖樹木原料皆可於此找到蹤跡。</p>
+        </div>
+        <a href="about.html"><span></span><p>了解詳情</p></a>
+        <div class="aboutonepic"></div>
+    </section>
   <!-- 第二區塊 -->
-  <section class="abouttwo">
+    <section class="abouttwo">
     <div class="abouttwopic"></div>
     <div>
         <h2>史詩級匠人 千百年傳承</h2>
