--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Owlet Wand Shop: About Us</title>
+    <title>Contact Us: Owlet Wand Shop</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/faq.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -13,100 +13,109 @@
     </style>
 </head>
 <body>
-    <!-- 頂端nav -->
+  <!-- 頂端nav -->
   <nav class="head nav">
-      <a href="index.html" class="toplogo">
-          <img src="img/logo_ca_l.svg" alt="">
-      </a>
-      <ul class="mainlist">
-          <li><a href="about.html">鴞之匠心</a></li>
-          <li><a href="store.html">精品商店</a></li>
-          <li><a class="loginnav" href="#">登入/註冊</a></li>
-          <li><a href="usercenter.html">會員中心</a></li>
-          <li><a href="faq.html">常見問題</a></li>
-      </ul>
-      <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
-  </nav>
+    <a href="index.html">
+        <img src="img/logo_ca_l.svg" alt="">
+    </a>
+    <div class="nav_main">
+        <ul>
+            <li><a href="about.html">鴞之匠心</a></li>
+            <li><a href="store.html">精品商店</a></li>
+            <li><a class="loginnav" href="#">登入/註冊</a></li>
+            <li><a href="usercenter.html">會員中心</a></li>
+            <li><a href="faq.html">常見問題</a></li>
+        </ul>
+    </div>
+    <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+    <button type="button" class="hamburger">
+        <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+        </span>
+    </button>
+</nav>
+  <!-- login懸浮視窗 -->
+    <article class="loginbg"></article>
   <!-- top區塊 -->
-  <header class="userfaqtop"></header>
+    <header class="userfaqtop"></header>
   <!-- 常見問題 -->
-  <section class="faqmod">
-      <h3>常見問題</h3>
-      <div class="ansmod">
-        <div class="anser">
-            <div class="ansbox"><label for="q1">訂單與付款</label><span></span></div>
-              <input type="radio" name="ans" id="q1">
-              <div class="anscontent">本店採貨到付款，不接受信用卡、匯款等其他交易方式<br>訂單完成後典藏魔杖將於訂單完成後一周內寄出。<br>其餘魔杖因維訂單成立後製作，故將於3-6個月內製作完成並寄出。<br>切記勿以任何方式聯繫催貨，否則後果自負概不退款，請耐心配合。</div>
+    <section class="faqmod">
+        <h3>常見問題</h3>
+        <div class="ansmod">
+            <div class="anser">
+                <div class="ansbox"><label for="q1">訂單與付款</label><span></span></div>
+                <input type="radio" name="ans" id="q1">
+                <div class="anscontent">本店採貨到付款，不接受信用卡、匯款等其他交易方式<br>訂單完成後典藏魔杖將於訂單完成後一周內寄出。<br>其餘魔杖因維訂單成立後製作，故將於3-6個月內製作完成並寄出。<br>切記勿以任何方式聯繫催貨，否則後果自負概不退款，請耐心配合。</div>
+            </div>
+            <div class="anser">
+                    <div class="ansbox"><label for="q2">產品證明與保固</label><span></span></div>
+                <input type="radio" name="ans" id="q2">
+                <div class="anscontent">本店出品魔杖皆有透明且優質來原產地證明，詳見本店介紹。</div>
+            </div>
+            <div class="anser">
+                <div class="ansbox"><label for="q3">退換貨流程</label><span></span></div>
+                <input type="radio" name="ans" id="q3">
+                <div class="anscontent">我們了解每位巫師與自己的魔杖需要很長的時間磨合才能確定與自己的匹配度，因此本店提供5年不適合退貨服務<br>唯需負擔定價之50%費用與運費，並同意本店以典藏魔杖形式繼續販售。<br>本保固不包含物理及名譽毀損、髒污及其他影響魔杖後續販售之問題</div>
+            </div>
+            <div class="anser">
+            <div class="ansbox"><label for="q4">其他問題</label><span></span></div>
+                <input type="radio" name="ans" id="q4">
+                <div class="anscontent">本店合作之所有魔杖製造師皆有百年以上傳承與經驗。<br>若有任何疑慮請勿購買聯繫，不回答任何質疑製造工藝與手藝的無理問題。<br>信任買賣，非誠勿擾。</div>
+            </div>
         </div>
-        <div class="anser">
-                <div class="ansbox"><label for="q2">產品證明與保固</label><span></span></div>
-              <input type="radio" name="ans" id="q2">
-              <div class="anscontent">本店出品魔杖皆有透明且優質來原產地證明，詳見本店介紹。</div>
-        </div>
-        <div class="anser">
-            <div class="ansbox"><label for="q3">退換貨流程</label><span></span></div>
-            <input type="radio" name="ans" id="q3">
-            <div class="anscontent">我們了解每位巫師與自己的魔杖需要很長的時間磨合才能確定與自己的匹配度，因此本店提供5年不適合退貨服務<br>唯需負擔定價之50%費用與運費，並同意本店以典藏魔杖形式繼續販售。<br>本保固不包含物理及名譽毀損、髒污及其他影響魔杖後續販售之問題</div>
-        </div>
-        <div class="anser">
-          <div class="ansbox"><label for="q4">其他問題</label><span></span></div>
-            <input type="radio" name="ans" id="q4">
-            <div class="anscontent">本店合作之所有魔杖製造師皆有百年以上傳承與經驗。<br>若有任何疑慮請勿購買聯繫，不回答任何質疑製造工藝與手藝的無理問題。<br>信任買賣，非誠勿擾。</div>
-        </div>
-      </div>
-  </section>
+    </section>
   <!-- 提問區 -->
-  <section class="inputbox">
-        <h3>找不到你的問題? 請填寫以下表單</h3>
-        <div>
-            <label for="faqname">您的姓名</label><br>
-            <input type="text" id="faqname">
-        </div>
-        <div>
-            <label for="faqphone">聯絡電話</label><br>
-            <input type="text" id="faqphone">
-        </div>
-        <div>
-            <label for="faqaddress">聯絡地址</label><br>
-            <input type="text" id="faqaddress">
-        </div>
-        <div>
-            <label for="faqadvice">疑問與建議</label><br>
-            <textarea rows="10" id="faqadvice"></textarea>
-        </div>
-        <input type="button" value="送出">
-  </section>
+    <section class="inputbox">
+            <h3>找不到你的問題? 請填寫以下表單</h3>
+            <div>
+                <label for="faqname">您的姓名</label><br>
+                <input type="text" id="faqname">
+            </div>
+            <div>
+                <label for="faqphone">聯絡電話</label><br>
+                <input type="text" id="faqphone">
+            </div>
+            <div>
+                <label for="faqaddress">聯絡地址</label><br>
+                <input type="text" id="faqaddress">
+            </div>
+            <div>
+                <label for="faqadvice">疑問與建議</label><br>
+                <textarea rows="10" id="faqadvice"></textarea>
+            </div>
+            <input type="button" value="送出">
+    </section>
   <!-- 底端footer -->
-  <footer class="bottom">
-      <h2>服務據點</h2>
-      <ul class="serverpoint">
-        <li><div>
-            <p>台灣分部</p>
-            <p>台北市中正區台北車站</p>
-            <p>交通資訊：<br>位於台北車站大廳東北側第六塊磁磚位置之柱面<br><br>營業時間：<br>台北時間周一至周五<br>上午2:00~上午5:00</p>
-        </div></li>
-        <li><div>
-            <p>日本分部</p>
-            <p>東京都千代田區東京車站</p>
-            <p>交通資訊：<br>位於東京車站大廳鄭西側第三塊磁磚位置之牆面<br><br>營業時間：<br>東京時間周一至週五<br>上午1:00~上午4:00</p>
-        </div></li>
-        <li><div>
-            <p>韓國分部</p>
-            <p>首爾特別市龍山區首爾站</p>
-            <p>交通資訊：<br>位於首爾站大廳東南側第十七塊磁磚位置之牆面<br><br>營業時間：<br>首爾時間周一至週五<br>上午1:00~上午4:00</p>
-        </div></li>
-      </ul>
-      <!-- back to top -->
-      <a class="gototopbtn float" href="#">
-          <img src="img/logo_ca_s.svg" alt="">
-          <img src="img/uparr.png" alt="">
-          <P>BACK TO TOP</P>
-      <a>
-      <P class="tibame">本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。</P>
-  </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-  <script src="js/all.js"></script>
+    <footer class="bottom">
+        <h2>服務據點</h2>
+        <ul class="serverpoint">
+            <li><div>
+                <p>台灣分部</p>
+                <p>台北市中正區台北車站</p>
+                <p>交通資訊：<br>位於台北車站大廳東北側第六塊磁磚位置之柱面<br><br>營業時間：<br>台北時間周一至周五<br>上午2:00~上午5:00</p>
+            </div></li>
+            <li><div>
+                <p>日本分部</p>
+                <p>東京都千代田區東京車站</p>
+                <p>交通資訊：<br>位於東京車站大廳鄭西側第三塊磁磚位置之牆面<br><br>營業時間：<br>東京時間周一至週五<br>上午1:00~上午4:00</p>
+            </div></li>
+            <li><div>
+                <p>韓國分部</p>
+                <p>首爾特別市龍山區首爾站</p>
+                <p>交通資訊：<br>位於首爾站大廳東南側第十七塊磁磚位置之牆面<br><br>營業時間：<br>首爾時間周一至週五<br>上午1:00~上午4:00</p>
+            </div></li>
+        </ul>
+        <!-- back to top -->
+        <a class="gototopbtn float" href="#">
+            <img src="img/logo_ca_s.svg" alt="">
+            <img src="img/uparr.png" alt="">
+            <P>BACK TO TOP</P>
+        <a>
+        <P class="tibame">本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。</P>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script src="js/all.js"></script>
 </body>
 </html>
