--- a/buyinglist.html
+++ b/buyinglist.html
@@ -28,7 +28,7 @@
         </ul>
     </div>
     <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
-    <button type="button" class="hamburger">
+    <button type="button" class="hamburger hamburger-act">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
         </span>
