--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&family=Roboto:wght@300&display=swap');
     </style>
@@ -28,7 +30,7 @@
             </ul>
         </div>
         <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
-        <button type="button" class="hamburger">
+        <button type="button" class="hamburger hamburger-act">
             <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
             </span>
@@ -40,16 +42,15 @@
   <!-- top區塊 -->
     <header class="indextop">
         <h1>十年磨一劍</h1>
-        <img src="img/logo_gold_s.svg" alt="">
         <h1>霜刃未曾試</h1>
     </header>
   <!-- 第一區塊 -->
-    <section class="indexone slidemeL">
+    <section class="indexone">
       <img src="img/indexone.png" alt="">
       <div>
         <h2>年後第一咒 就看這一手</h2>
         <p>2023第一季新銳魔杖發表！<br>
-        由魔杖製造師希柯巴·沃爾夫創新研發設計的新冠系列，以影響全球新冠病毒作為設計參考，讓你擁有不輸疫情的強大魔杖！</p>
+        由魔杖製造師希柯巴·沃爾夫創新研發設計的新冠系列，<br>以影響全球新冠病毒作為設計參考，讓你擁有不輸疫情的強大魔杖！</p>
         <a href="store.html"><span></span><p>了解詳情</p></a>
       </div>
     </section>
@@ -66,75 +67,81 @@
     <section class="gotoshop">
         <h2>進一步選購</h2>
         <div class="toshopmaindiv">
-        <ul class="gotoshopmain">
-            <li class="gotoshop1"><a href="store.html">
-                <div>
-                    <h3>特效魔杖</h3>
-                    <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
-                    <p>立即線上選購 ></p>
-                </div>
-            </a></li>
-            <li class="gotoshop2"><a href="store.html">
-                <div>
-                    <h3>典藏魔杖</h3>
-                    <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
-                    <p>立即線上選購 ></p>
-                </div>
-            </a></li>
-            <li class="gotoshop3"><a href="store.html">
-                <div>
-                    <h3>寶石魔杖</h3>
-                    <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
-                    <p>立即線上選購 ></p>
-                </div>
-            </a></li>
-            <li class="gotoshop4"><a href="faq.html">
-                <div>
-                    <h3>訂製魔杖</h3>
-                    <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
-                    <p>立即線上選購 ></p>
-                </div>
-            </a></li>
-            <li class="gotoshop1"><a href="store.html">
-                <div>
-                    <h3>特效魔杖</h3>
-                    <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
-                    <p>立即線上選購 ></p>
-                </div>
-            </a></li>
-            <li class="gotoshop2"><a href="store.html">
-                <div>
-                    <h3>典藏魔杖</h3>
-                    <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
-                    <p>立即線上選購 ></p>
-                </div>
-            </a></li>
-            <li class="gotoshop3"><a href="store.html">
-                <div>
-                    <h3>寶石魔杖</h3>
-                    <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
-                    <p>立即線上選購 ></p>
-                </div>
-            </a></li>
-            <li class="gotoshop4"><a href="faq.html">
-                <div>
-                    <h3>訂製魔杖</h3>
-                    <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
-                    <p>立即線上選購 ></p>
-                </div>
-            </a></li>
-        </ul>
-        </div>
-  <!-- 選購箭頭 -->
-        <div class="gotoshoparr">
-            <button type="button" class="btntoleft">
+            <ul class="gotoshopmain  owl-carousel owl-theme">
+                <li class="gotoshopitem item"><a href="store.html">
+                    <img src="img/gotoshop1.png" alt="">
+                    <div>
+                        <h3>特效魔杖</h3>
+                        <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
+                        <p>立即線上選購 ></p>
+                    </div>
+                </a></li>
+                <li class="gotoshopitem item"><a href="store.html">
+                    <img src="img/gotoshop2.png" alt="">
+                    <div>
+                        <h3>典藏魔杖</h3>
+                        <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
+                        <p>立即線上選購 ></p>
+                    </div>
+                </a></li>
+                <li class="gotoshopitem item"><a href="store.html">
+                    <img src="img/gotoshop3.png" alt="">
+                    <div>
+                        <h3>寶石魔杖</h3>
+                        <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
+                        <p>立即線上選購 ></p>
+                    </div>
+                </a></li>
+                <li class="gotoshopitem item"><a href="faq.html">
+                    <img src="img/gotoshop4.png" alt="">
+                    <div>
+                        <h3>訂製魔杖</h3>
+                        <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
+                        <p>立即線上選購 ></p>
+                    </div>
+                </a></li>
+                <li class="gotoshopitem item"><a href="store.html">
+                    <img src="img/gotoshop1.png" alt="">
+                    <div>
+                        <h3>特效魔杖</h3>
+                        <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
+                        <p>立即線上選購 ></p>
+                    </div>
+                </a></li>
+                <li class="gotoshopitem item"><a href="store.html">
+                    <img src="img/gotoshop2.png" alt="">
+                    <div>
+                        <h3>典藏魔杖</h3>
+                        <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
+                        <p>立即線上選購 ></p>
+                    </div>
+                </a></li>
+                <li class="gotoshopitem item"><a href="store.html">
+                    <img src="img/gotoshop3.png" alt="">
+                    <div>
+                        <h3>寶石魔杖</h3>
+                        <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
+                        <p>立即線上選購 ></p>
+                    </div>
+                </a></li>
+                <li class="gotoshopitem item"><a href="faq.html">
+                    <img src="img/gotoshop4.png" alt="">
+                    <div>
+                        <h3>訂製魔杖</h3>
+                        <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
+                        <p>立即線上選購 ></p>
+                    </div>
+                </a></li>
+            </ul>
+            
+            <!-- 沒OWL的自設箭頭 -->
+            <!-- <button type="button" class="btntoleft owl-prev">
                 <img src="img/d_arr.svg" alt="">
             </button>
-            <button type="button" class="btntoright">
+            <button type="button" class="btntoright owl-next">
                 <img src="img/b_arr.svg" alt="">
-            </button>
-
-        </div> 
+            </button> -->
+        </div>
     </section >
   <!-- 底端footer -->
     <footer class="bottom">
@@ -142,18 +149,18 @@
         <ul class="serverpoint">
             <li><div>
                 <p>台灣分部</p>
-                <p>台北市中正區台北車站</p>
-                <p>交通資訊：<br>位於台北車站大廳東北側第六塊磁磚位置之柱面<br><br>營業時間：<br>台北時間周一至周五<br>上午2:00~上午5:00</p>
+                <p>台北市台北車站</p>
+                <p>交通資訊：<br>位於台北車站大廳東北側第六塊磁磚位置之柱面<br><br>營業時間： 台北時間<br>周一至周五上午2:00~上午5:00</p>
             </div></li>
             <li><div>
                 <p>日本分部</p>
-                <p>東京都千代田區東京車站</p>
-                <p>交通資訊：<br>位於東京車站大廳鄭西側第三塊磁磚位置之牆面<br><br>營業時間：<br>東京時間周一至週五<br>上午1:00~上午4:00</p>
+                <p>東京都東京車站</p>
+                <p>交通資訊：<br>位於東京車站大廳鄭西側第三塊磁磚位置之牆面<br><br>營業時間： 東京時間<br>周一至週五上午1:00~上午4:00</p>
             </div></li>
             <li><div>
                 <p>韓國分部</p>
-                <p>首爾特別市龍山區首爾站</p>
-                <p>交通資訊：<br>位於首爾站大廳東南側第十七塊磁磚位置之牆面<br><br>營業時間：<br>首爾時間周一至週五<br>上午1:00~上午4:00</p>
+                <p>首爾特別市首爾站</p>
+                <p>交通資訊：<br>位於首爾站大廳東南側第十七塊磁磚位置之牆面<br><br>營業時間： 首爾時間<br>周一至週五上午1:00~上午4:00</p>
             </div></li>
         </ul>
       <!-- back to top -->
@@ -162,11 +169,12 @@
             <img src="img/uparr.png" alt="">
             <P>BACK TO TOP</P>
         <a>
-        <P class="tibame">本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。</P>
+        <P class="tibame">本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，僅供學習、展示之用。</P>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="js/all.js"></script>
 </body>
 </html>
