add about rwd & index some animation

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     </div>
                 </a></li>
             </ul>
-            
-            <!-- 沒OWL的自設箭頭 -->
+
+            <!-- 沒OWL的自設選購箭頭 -->
             <!-- <button type="button" class="btntoleft owl-prev">
                 <img src="img/d_arr.svg" alt="">
             </button>
