--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&family=Roboto:wght@300&display=swap');
     </style>
@@ -38,25 +40,25 @@
     <article class="loginbg"></article>
   <!-- top區塊 -->
     <header class="abouttop">
-        <img src="img/logo_14_s.svg" alt="">
         <h1>時往歲載陰</h1>
+        <img src="img/logo_14_s.svg" alt="">
         <h1>千餘年屹立</h1>
-        <div><p>since 666</p></div>
+        <p>since 666</p>
     </header>
   <!-- 第一區塊 -->
     <section class="aboutone">
         <div>
-          <h2>萬年原生木 坐擁千坪林</h2>
+          <h2>萬年原生木<br>坐擁千坪林</h2>
           <p>本店擁有佔地達1,600坪廣闊樹木林，原始森林推測樹齡最高達萬年。<br>林內涵蓋寒帶、溫帶、熱帶及地中海型氣候樹種，市面上常見與少見的魔杖樹木原料皆可於此找到蹤跡。</p>
         </div>
         <a href="about.html"><span></span><p>了解詳情</p></a>
-        <div class="aboutonepic"></div>
+        <img src="img/aboutone.jpg" alt="">
     </section>
   <!-- 第二區塊 -->
     <section class="abouttwo">
-    <div class="abouttwopic"></div>
+    <img src="img/abouttwo.png" alt="">
     <div>
-        <h2>史詩級匠人 千百年傳承</h2>
+        <h2>史詩級匠人 <br>千百年傳承</h2>
         <p>研究魔杖超越千年，與促繁不及備載的魔杖製造師家族與後代開發與合作，至今本店的獨家御用製造師已超越千名。<br>每年皆會推出上百款系列，也接受諮詢訂製，持續致力精進與創新魔杖產業。    </p>
     </div>
     <a href="about.html"><span></span><p>了解詳情</p></a>
@@ -64,84 +66,90 @@
 <!-- 第三區塊 -->
    <section class="aboutone">
     <div>
-      <h2>優質杖芯 來源安心</h2>
-      <p>與多家知名奇幻生物培育商具長期合作。<br>每一支自本店售出的魔杖(不包含典藏、特殊系列與私人訂製)杖芯都具備透明的產地與血統證明書，確保每一個杖芯所使用的魔法材料都是有合法且優質的。</p>
+      <h2>優質杖芯<br>來源安心</h2>
+      <p>與多家知名奇幻生物培育商具長期合作。<br>每一支自本店售出的魔杖(典藏、特殊系列與私人訂製除外)杖芯都具備透明的產地與血統證明書，確保製造的所有魔法材料都是合法且優質的。</p>
     </div>
     <a href="about.html"><span></span><p>了解詳情</p></a>
-    <div class="aboutthreepic"></div>
+    <img class="aboutthree" src="img/aboutthree.png" alt="">
 </section>
   <!-- 進一步選購 -->
   <section class="gotoshop">
     <h2>進一步選購</h2>
     <div class="toshopmaindiv">
-    <ul class="gotoshopmain">
-        <li class="gotoshop1"><a href="store.html">
-            <div>
-                <h3>特效魔杖</h3>
-                <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
-                <p>立即線上選購 ></p>
-            </div>
-        </a></li>
-        <li class="gotoshop2"><a href="store.html">
-            <div>
-                <h3>典藏魔杖</h3>
-                <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
-                <p>立即線上選購 ></p>
-            </div>
-        </a></li>
-        <li class="gotoshop3"><a href="store.html">
-            <div>
-                <h3>寶石魔杖</h3>
-                <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
-                <p>立即線上選購 ></p>
-            </div>
-        </a></li>
-        <li class="gotoshop4"><a href="faq.html">
-            <div>
-                <h3>訂製魔杖</h3>
-                <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
-                <p>立即線上選購 ></p>
-            </div>
-        </a></li>
-        <li class="gotoshop1"><a href="store.html">
-            <div>
-                <h3>特效魔杖</h3>
-                <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
-                <p>立即線上選購 ></p>
-            </div>
-        </a></li>
-        <li class="gotoshop2"><a href="store.html">
-            <div>
-                <h3>典藏魔杖</h3>
-                <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
-                <p>立即線上選購 ></p>
-            </div>
-        </a></li>
-        <li class="gotoshop3"><a href="store.html">
-            <div>
-                <h3>寶石魔杖</h3>
-                <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
-                <p>立即線上選購 ></p>
-            </div>
-        </a></li>
-        <li class="gotoshop4"><a href="faq.html">
-            <div>
-                <h3>訂製魔杖</h3>
-                <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
-                <p>立即線上選購 ></p>
-            </div>
-        </a></li>
-    </ul>
-    </div>
-    <!-- 選購箭頭 -->
-    <div class="gotoshoparr">
-        <button type="button" class="btntoleft">
+        <ul class="gotoshopmain  owl-carousel owl-theme">
+            <li class="gotoshopitem item"><a href="store.html">
+                <img src="img/gotoshop1.png" alt="">
+                <div>
+                    <h3>特效魔杖</h3>
+                    <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
+                    <p>立即線上選購 ></p>
+                </div>
+            </a></li>
+            <li class="gotoshopitem item"><a href="store.html">
+                <img src="img/gotoshop2.png" alt="">
+                <div>
+                    <h3>典藏魔杖</h3>
+                    <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
+                    <p>立即線上選購 ></p>
+                </div>
+            </a></li>
+            <li class="gotoshopitem item"><a href="store.html">
+                <img src="img/gotoshop3.png" alt="">
+                <div>
+                    <h3>寶石魔杖</h3>
+                    <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
+                    <p>立即線上選購 ></p>
+                </div>
+            </a></li>
+            <li class="gotoshopitem item"><a href="faq.html">
+                <img src="img/gotoshop4.png" alt="">
+                <div>
+                    <h3>訂製魔杖</h3>
+                    <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
+                    <p>立即線上選購 ></p>
+                </div>
+            </a></li>
+            <li class="gotoshopitem item"><a href="store.html">
+                <img src="img/gotoshop1.png" alt="">
+                <div>
+                    <h3>特效魔杖</h3>
+                    <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
+                    <p>立即線上選購 ></p>
+                </div>
+            </a></li>
+            <li class="gotoshopitem item"><a href="store.html">
+                <img src="img/gotoshop2.png" alt="">
+                <div>
+                    <h3>典藏魔杖</h3>
+                    <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
+                    <p>立即線上選購 ></p>
+                </div>
+            </a></li>
+            <li class="gotoshopitem item"><a href="store.html">
+                <img src="img/gotoshop3.png" alt="">
+                <div>
+                    <h3>寶石魔杖</h3>
+                    <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
+                    <p>立即線上選購 ></p>
+                </div>
+            </a></li>
+            <li class="gotoshopitem item"><a href="faq.html">
+                <img src="img/gotoshop4.png" alt="">
+                <div>
+                    <h3>訂製魔杖</h3>
+                    <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
+                    <p>立即線上選購 ></p>
+                </div>
+            </a></li>
+        </ul>
+    
+        <!-- 沒OWL的自設選購箭頭 -->
+        <!-- <button type="button" class="btntoleft">
             <img src="img/d_arr.svg" alt="">
         </button>
         <button type="button" class="btntoright">
             <img src="img/b_arr.svg" alt="">
-        </button>
-
+        </button> -->
     </div> 
   </section >
   <!-- 底端footer -->
@@ -175,6 +183,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="js/all.js"></script>
 </body>
 </html>
