index&about RWD done

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </a>
     <div class="nav_main">
         <ul>
-            <li><a href="about.html">鴞之匠心</a></li>
+            <li><a style="color:#B69452 " href="about.html">鴞之匠心</a></li>
             <li><a href="store.html">精品商店</a></li>
             <li><a class="loginnav" href="#">登入/註冊</a></li>
             <li><a href="usercenter.html">會員中心</a></li>
@@ -67,7 +67,7 @@
    <section class="aboutone">
     <div>
       <h2>優質杖芯<br>來源安心</h2>
-      <p>與多家知名奇幻生物培育商具長期合作。<br>每一支自本店售出的魔杖(典藏、特殊系列與私人訂製除外)杖芯都具備透明的產地與血統證明書，確保製造的所有魔法材料都是合法且優質的。</p>
+      <p>與知名奇幻生物培育商具長期合作。<br>每一支自本店製作售出的魔杖(私人訂製除外)杖芯都具備透明的產地與血統證明書，確保製造的所有魔法材料都是合法且優質的。</p>
     </div>
     <a href="about.html"><span></span><p>了解詳情</p></a>
     <img class="aboutthree" src="img/aboutthree.png" alt="">
