add login & store RWD

--- a/about.html
+++ b/about.html
@@ -185,5 +185,31 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="js/all.js"></script>
+  <script>
+      // =========可惡的輪播owl套件=========
+$('.owl-carousel').owlCarousel({
+    loop:false,
+    margin:40,
+    nav:true,
+    dots:false,
+    responsive:{
+        0:{
+            items:1
+        },
+        576:{
+            items:2
+        },
+        992:{
+            items:3
+        },
+        1600:{
+            items:4
+        },
+        2100:{
+            items:5
+        }
+    }
+})
+  </script>
 </body>
 </html>
