--- a/usercenter.html
+++ b/usercenter.html
@@ -7,7 +7,7 @@
     <title>About Us: Owlet Wand Shop</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/usercenter.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&family=Roboto:wght@300&display=swap');
     </style>
@@ -23,7 +23,7 @@
             <li><a href="about.html">鴞之匠心</a></li>
             <li><a href="store.html">精品商店</a></li>
             <li><a class="loginnav" href="#">登入/註冊</a></li>
-            <li><a href="usercenter.html">會員中心</a></li>
+            <li><a style="color:#B69452;" href="usercenter.html">會員中心</a></li>
             <li><a href="faq.html">常見問題</a></li>
         </ul>
     </div>
@@ -40,8 +40,9 @@
     <header class="userfaqtop"></header>
   <!-- 標題區 -->
     <section class="username">
+        <h1>user</h1>
         <p><a href="index.html"> < 回到首頁</a></p>
-        <h3><span>user</span><span>的會員專區</span></h3>
+        <h3>的會員專區</h3>
         <p><a href="#"> 資料修改 ></a></p>
     </section>
   <!-- 按鈕區 -->
@@ -50,6 +51,7 @@
             <li><a href="faq.html"><i class="fas fa-hat-wizard"></i><p>常見問題</p></a></li>
             <li><a href="buyinglist.html"><i class="fas fa-feather-alt"></i><p>購物清單</p></a></li>
             <li><a href="buyinglist.html"><i class="fas fa-cat"></i><p>訂單查詢</p></a></li>
+            <li><a href="#"><i class="fa-solid fa-broom"></i><p>會員登出</p></a></li>
         </ul>
     </section>
   <!-- 底端footer -->
