faq & buyinglist RWD

--- a/buyinglist.html
+++ b/buyinglist.html
@@ -27,7 +27,7 @@
             <li><a href="faq.html">常見問題</a></li>
         </ul>
     </div>
-    <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+    <a style="color:#B69452 " href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
     <button type="button" class="hamburger hamburger-act">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
@@ -45,7 +45,7 @@
     <article class="buyinglistmain">
         <section class="list" >
             <div>
-                <img src="img/products/接骨木魔杖，騎士墜鬼馬尾羽.png" alt="">
+                <img src="img/products/1.2_Dumbledore.png" alt="">
                 <button>刪除</button>
             </div>
             <div>
@@ -59,7 +59,7 @@
         </section>
         <section class="list" >
             <div>
-            <img src="img/products/接骨木魔杖，騎士墜鬼馬尾羽.png" alt="">
+            <img src="img/products/1.2_Dumbledore.png" alt="">
             <button>刪除</button>
             </div>
             <div>
@@ -78,8 +78,8 @@
         </section>
     </article>
     <section class="buyinglistbtn">
-        <a class="buyinglistbtn1" href="store".html"><span></span><p>繼續選購</p></a>
-        <a class="buyinglistbtn2" href="buyinglist.html"><span></span><p>前往結帳</p></a>
+        <a href="store.html"><p>< 繼續選購</p></a>
+        <a href="buyinglist.html"><p>前往結帳 ></p></a>
     </section>
   <!-- 底端footer -->
     <footer class="bottom">
