--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@
             <li><a href="store.html">精品商店</a></li>
             <li><a class="loginnav" href="#">登入/註冊</a></li>
             <li><a href="usercenter.html">會員中心</a></li>
-            <li><a href="faq.html">常見問題</a></li>
+            <li><a style="color:#B69452 " href="faq.html">常見問題</a></li>
         </ul>
     </div>
     <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
@@ -42,26 +42,26 @@
     <section class="faqmod">
         <h3>常見問題</h3>
         <div class="ansmod">
-            <div class="anser">
-                <div class="ansbox"><label for="q1">訂單與付款</label><span></span></div>
-                <input type="radio" name="ans" id="q1">
-                <div class="anscontent">本店採貨到付款，不接受信用卡、匯款等其他交易方式<br>訂單完成後典藏魔杖將於訂單完成後一周內寄出。<br>其餘魔杖因維訂單成立後製作，故將於3-6個月內製作完成並寄出。<br>切記勿以任何方式聯繫催貨，否則後果自負概不退款，請耐心配合。</div>
+            <div class="ansbox">
+                <label for="q1">訂單與付款</label><span><span></span></span>
+            </div> 
+            <input type="radio" name="ans" id="q1">
+            <div class="anscontent">本店採貨到付款，不接受信用卡、匯款等其他交易方式<br>訂單完成後典藏魔杖將於訂單完成後一周內寄出。<br>其餘魔杖因維訂單成立後製作，故將於3-6個月內製作完成並寄出。<br>切記勿以任何方式聯繫催貨，否則後果自負概不退款，請耐心配合。</div>
+            <div class="ansbox">
+                <label for="q2">產品證明與保固</label><span><span></span></span>
             </div>
-            <div class="anser">
-                    <div class="ansbox"><label for="q2">產品證明與保固</label><span></span></div>
-                <input type="radio" name="ans" id="q2">
-                <div class="anscontent">本店出品魔杖皆有透明且優質來原產地證明，詳見本店介紹。</div>
+            <input type="radio" name="ans" id="q2">
+            <div class="anscontent">本店出品魔杖皆有透明且優質來原產地證明，詳見本店介紹。</div>
+            <div class="ansbox">
+                <label for="q3">退換貨流程</label><span><span></span></span>
             </div>
-            <div class="anser">
-                <div class="ansbox"><label for="q3">退換貨流程</label><span></span></div>
-                <input type="radio" name="ans" id="q3">
-                <div class="anscontent">我們了解每位巫師與自己的魔杖需要很長的時間磨合才能確定與自己的匹配度，因此本店提供5年不適合退貨服務<br>唯需負擔定價之50%費用與運費，並同意本店以典藏魔杖形式繼續販售。<br>本保固不包含物理及名譽毀損、髒污及其他影響魔杖後續販售之問題</div>
+            <input type="radio" name="ans" id="q3">
+            <div class="anscontent">我們了解每位巫師與自己的魔杖需要很長的時間磨合才能確定與自己的匹配度，因此本店提供5年不適合退貨服務<br>唯需負擔定價之50%費用與運費，並同意本店以典藏魔杖形式繼續販售。<br>本保固不包含物理及名譽毀損、髒污及其他影響魔杖後續販售之問題</div>
+            <div class="ansbox">
+                <label for="q4">其他問題</label><span><span></span></span>
             </div>
-            <div class="anser">
-            <div class="ansbox"><label for="q4">其他問題</label><span></span></div>
-                <input type="radio" name="ans" id="q4">
-                <div class="anscontent">本店合作之所有魔杖製造師皆有百年以上傳承與經驗。<br>若有任何疑慮請勿購買聯繫，不回答任何質疑製造工藝與手藝的無理問題。<br>信任買賣，非誠勿擾。</div>
-            </div>
+            <input type="radio" name="ans" id="q4">
+            <div class="anscontent">本店合作之所有魔杖製造師皆有百年以上傳承與經驗。<br>若有任何疑慮請勿購買聯繫，不回答任何質疑製造工藝與手藝的無理問題。<br>信任買賣，非誠勿擾。</div>
         </div>
     </section>
   <!-- 提問區 -->
