adjust fontsize & loading page & rename file

--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us: Owlet Wand Shop</title>
+    <link rel="shortcut icon" href="./img/logo_14_s.svg"/>
+    <link rel="bookmark" href="./img/logo_14_s.svg"/>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -164,7 +166,7 @@
         <li><div>
             <p>日本分部</p>
             <p>東京都千代田區東京車站</p>
-            <p>交通資訊：<br>位於東京車站大廳鄭西側第三塊磁磚位置之牆面<br><br>營業時間：<br>東京時間周一至週五<br>上午1:00~上午4:00</p>
+            <p>交通資訊：<br>位於東京車站大廳正西側第三塊磁磚位置之牆面<br><br>營業時間：<br>東京時間周一至週五<br>上午1:00~上午4:00</p>
         </div></li>
         <li><div>
             <p>韓國分部</p>
