--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Owlet Wand Shop</title>
+    <link rel="shortcut icon" href="./img/logo_14_s.svg"/>
+    <link rel="bookmark" href="./img/logo_14_s.svg"/>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -143,6 +145,11 @@
             </button> -->
         </div>
     </section >
+ <!-- loading -->
+    <div class="loadingblock">
+        <img src="img/loading.svg" alt="">
+        <p>Loading...</p>
+    </div>
   <!-- 底端footer -->
     <footer class="bottom">
         <h2>服務據點</h2>
@@ -155,7 +162,7 @@
             <li><div>
                 <p>日本分部</p>
                 <p>東京都東京車站</p>
-                <p>交通資訊：<br>位於東京車站大廳鄭西側第三塊磁磚位置之牆面<br><br>營業時間： 東京時間<br>周一至週五上午1:00~上午4:00</p>
+                <p>交通資訊：<br>位於東京車站大廳正西側第三塊磁磚位置之牆面<br><br>營業時間： 東京時間<br>周一至週五上午1:00~上午4:00</p>
             </div></li>
             <li><div>
                 <p>韓國分部</p>
@@ -171,6 +178,7 @@
         <a>
         <P class="tibame">本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，僅供學習、展示之用。</P>
     </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
