--- a/usercenter.html
+++ b/usercenter.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us: Owlet Wand Shop</title>
+    <link rel="shortcut icon" href="./img/logo_14_s.svg"/>
+    <link rel="bookmark" href="./img/logo_14_s.svg"/>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/usercenter.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
@@ -66,7 +68,7 @@
             <li><div>
                 <p>日本分部</p>
                 <p>東京都千代田區東京車站</p>
-                <p>交通資訊：<br>位於東京車站大廳鄭西側第三塊磁磚位置之牆面<br><br>營業時間：<br>東京時間周一至週五<br>上午1:00~上午4:00</p>
+                <p>交通資訊：<br>位於東京車站大廳正西側第三塊磁磚位置之牆面<br><br>營業時間：<br>東京時間周一至週五<br>上午1:00~上午4:00</p>
             </div></li>
             <li><div>
                 <p>韓國分部</p>
