--- a/buyinglist.html
+++ b/buyinglist.html
@@ -29,7 +29,7 @@
             <li><a href="faq.html">常見問題</a></li>
         </ul>
     </div>
-    <a style="color:#B69452 " href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+    <a class= "buyingcar" style="color:#B69452 " href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
     <button type="button" class="hamburger hamburger-act">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
@@ -83,6 +83,11 @@
         <a href="store.html"><p>< 繼續選購</p></a>
         <a href="buyinglist.html"><p>前往結帳 ></p></a>
     </section>
+     <!-- loading -->
+     <div class="loadingblock">
+        <img src="img/loading.svg" alt="">
+        <p>Loading...</p>
+    </div>
   <!-- 底端footer -->
     <footer class="bottom">
         <h2>服務據點</h2>
