--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
             <li><a style="color:#B69452 " href="faq.html">常見問題</a></li>
         </ul>
     </div>
-    <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+    <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
     <button type="button" class="hamburger hamburger-act">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
@@ -87,6 +87,11 @@
             </div>
             <input type="button" value="送出">
     </section>
+     <!-- loading -->
+     <div class="loadingblock">
+        <img src="img/loading.svg" alt="">
+        <p>Loading...</p>
+    </div>
   <!-- 底端footer -->
     <footer class="bottom">
         <h2>服務據點</h2>
