--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
                 <li><a href="faq.html">常見問題</a></li>
             </ul>
         </div>
-        <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+        <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
         <button type="button" class="hamburger hamburger-act">
             <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
             </span>
         </button>
     </nav>
-
   <!-- login懸浮視窗 -->
     <article class="loginbg"></article>
   <!-- top區塊 -->
