--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <li><a href="faq.html">常見問題</a></li>
         </ul>
     </div>
-    <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+    <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
     <button type="button" class="hamburger hamburger-act">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
@@ -154,6 +154,11 @@
         </button> -->
     </div> 
   </section >
+    <!-- loading -->
+    <div class="loadingblock">
+        <img src="img/loading.svg" alt="">
+        <p>Loading...</p>
+    </div>
   <!-- 底端footer -->
   <footer class="bottom">
       <h2>服務據點</h2>
