--- a/usercenter.html
+++ b/usercenter.html
@@ -29,7 +29,7 @@
             <li><a href="faq.html">常見問題</a></li>
         </ul>
     </div>
-    <a href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+    <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
     <button type="button" class="hamburger hamburger-act">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
@@ -56,6 +56,11 @@
             <li><a href="#"><i class="fa-solid fa-broom"></i><p>會員登出</p></a></li>
         </ul>
     </section>
+     <!-- loading -->
+     <div class="loadingblock">
+        <img src="img/loading.svg" alt="">
+        <p>Loading...</p>
+    </div>
   <!-- 底端footer -->
     <footer class="bottom">
         <h2>服務據點</h2>
