--- a/buyinglist.html
+++ b/buyinglist.html
@@ -29,7 +29,7 @@
             <li><a href="faq.html">常見問題</a></li>
         </ul>
     </div>
-    <a class= "buyingcar" style="color:#B69452 " href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+    <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i><span class="buyingdot"></span></a>
     <button type="button" class="hamburger hamburger-act">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
@@ -45,37 +45,9 @@
     </header>
   <!-- 清單內容 -->
     <article class="buyinglistmain">
-        <section class="list" >
-            <div>
-                <img src="img/products/1.2_Dumbledore.png" alt="">
-                <button>刪除</button>
-            </div>
-            <div>
-                <p>品名：<span>接骨木魔杖</span></p>
-                <p>匠人：<span>未知</span></p>
-                <p>尺寸：<span>15英吋</span></p>
-                <p>木材：<span>接骨木</span></p>
-                <p>杖芯：<span>騎士墜鬼馬尾羽</span></p>
-            </div>
-            <h3>7 加隆</h3>
-        </section>
-        <section class="list" >
-            <div>
-            <img src="img/products/1.2_Dumbledore.png" alt="">
-            <button>刪除</button>
-            </div>
-            <div>
-                <p>品名：<span>接骨木魔杖</span></p>
-                <p>匠人：<span>未知</span></p>
-                <p>尺寸：<span>15英吋</span></p>
-                <p>木材：<span>接骨木</span></p>
-                <p>杖芯：<span>騎士墜鬼馬尾羽</span></p>
-            </div>
-            <h3>7 加隆</h3>
-        </section>
         <section class="listtotal">
             <h3>總計</h3>
-            <p>14</p>
+            <p class="sum">0</p>
             <h3>加隆</h3>
         </section>
     </article>
@@ -120,5 +92,40 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="js/all.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function(){
+            let wandlists = JSON.parse(localStorage.getItem("wandlists"));
+            if(wandlists===null){
+                $(".buyinglistmain").prepend("<p>購物清單裡什麼都沒有</p>")
+                $(".sum").text("0")
+            }else{
+                let length= wandlists.length
+                for(let i=0; i<length; i++){
+                    $(".buyinglistmain").prepend(`<section class="list" >
+                        <div>
+                        <img src="${wandlists[i].pic}" alt="">
+                        <button class="btn_delete">刪除</button>
+                        </div>
+                        <div>
+                            <p>品名：<span>${wandlists[i].name}</span></p>
+                            <p>匠人：<span>${wandlists[i].maker}</span></p>
+                            <p>尺寸：<span>${wandlists[i].size}</span></p>
+                            <p>木材：<span>${wandlists[i].wood}</span></p>
+                            <p>杖芯：<span>${wandlists[i].core}</span></p>
+                        </div>
+                        <h3>7 加隆</h3>
+                        </section>`)
+                    $(".sum").text(length*7)
+                }
+            }
+        });
+        document.addEventListener("click", function(e){
+            if(e.target.classList.contains("btn_delete")){ 
+                e.target.closest("section").classList.add("fade_out") 
+                setTimeout(()=>{e.target.closest("section").remove()},800)
+            }
+        })
+                
+    </script>
 </body>
 </html>
