--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
             <li><a style="color:#B69452 " href="faq.html">常見問題</a></li>
         </ul>
     </div>
-    <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+    <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i><span class="buyingdot"></span></a>
     <button type="button" class="hamburger hamburger-act">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
