--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="faq.html">常見問題</a></li>
             </ul>
         </div>
-        <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i></a>
+        <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i><span class="buyingdot"></span></a>
         <button type="button" class="hamburger hamburger-act">
             <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
