--- a/ElderWand.html
+++ b/ElderWand.html
@@ -123,8 +123,10 @@
     <script src="js/all.js"></script>
     <script>
         // ====== 小圓點for 購物車 ======
+        let item_id = Date.now()
         $(".addlist").click(function(){
             let list = {
+                "id": item_id,
                 "name": "接骨木魔杖",
                 "maker": "不明",
                 "size": "15英吋",
