add emputy buylinglist note

--- a/buyinglist.html
+++ b/buyinglist.html
@@ -133,6 +133,7 @@
                     }
                     let length= wandlists.length
                     if(length==0){
+                        $(".buyinglistmain").prepend("<p>購物清單裡什麼都沒有</p>")
                         $(".buyingdot").css("display", "none")
                     }else{
                         $(".buyingdot").css("display", "block").text(length)
