buyinglist remove button fix

--- a/buyinglist.html
+++ b/buyinglist.html
@@ -104,7 +104,7 @@
                     $(".buyinglistmain").prepend(`<section class="list" wandid= "${wandlists[i].id}" >
                         <div>
                         <img src="${wandlists[i].pic}" alt="">
-                        <button class="btn_delete">刪除</button>
+                        <button type="button" class="btn_delete">刪除</button>
                         </div>
                         <div>
                             <p>品名：<span>${wandlists[i].name}</span></p>
