修改首頁JS與壓縮首頁圖片、分開各JS檔案

--- a/ElderWand.html
+++ b/ElderWand.html
@@ -121,6 +121,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="js/all.js"></script>
+    <script src="js/ElderWand.js"></script>
+
     <script>
         // ====== 小圓點for 購物車 ======
         $(".addlist").click(function(){
