--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Owlet Wand Shop</title>
-    <link rel="shortcut icon" href="./img/logo_14_s.svg"/>
-    <link rel="bookmark" href="./img/logo_14_s.svg"/>
+    <link rel="shortcut icon" href="./img/logo_14_s.svg" />
+    <link rel="bookmark" href="./img/logo_14_s.svg" />
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&family=Roboto:wght@300&display=swap');
     </style>
 </head>
+
 <body>
-  <!-- 頂端nav -->
+    <!-- 頂端nav -->
     <nav class="head nav">
         <a href="index.html">
             <img src="img/logo_ca_l.svg" alt="">
@@ -31,108 +35,113 @@
                 <li><a href="faq.html">常見問題</a></li>
             </ul>
         </div>
-        <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i><span class="buyingdot"></span></a>
+        <a class="buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i><span
+                class="buyingdot"></span></a>
         <button type="button" class="hamburger hamburger-act">
             <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
             </span>
         </button>
     </nav>
-  <!-- login懸浮視窗 -->
+    <!-- login懸浮視窗 -->
     <article class="loginbg"></article>
-  <!-- top區塊 -->
+    <!-- top區塊 -->
     <header class="indextop">
         <h1>十年磨一劍</h1>
         <h1>霜刃未曾試</h1>
     </header>
-  <!-- 第一區塊 -->
+    <!-- 第一區塊 -->
     <section class="indexone">
-      <img src="img/indexone.png" alt="">
-      <div>
-        <h2>年後第一咒 就看這一手</h2>
-        <p>2023第一季新銳魔杖發表！<br>
-        由魔杖製造師希柯巴·沃爾夫創新研發設計的新冠系列，<br>以影響全球新冠病毒作為設計參考，讓你擁有不輸疫情的強大魔杖！</p>
-        <a href="store.html"><span></span><p>了解詳情</p></a>
-      </div>
-    </section>
-  <!-- 第二區塊 -->
-    <section class="indextwo">
-        <img src="img/indextwo.jpg" alt="">
+        <img class="indexone_img" src="img/indexone.png" alt="">
         <div>
-            <h2>傳奇典藏 亙久不滅</h2>
-            <p>想擁有傳奇人物使用過的強大魔杖嗎<br>想與參與過史詩大戰的魔杖並肩作戰嗎?<br>不定期更新上架典藏魔杖收藏，了解魔杖與他過去的主人不凡的經歷。</p>
-            <a href="about.html"><span></span><p>了解詳情</p></a>
+            <h2>年後第一咒 就看這一手</h2>
+            <h4>2023第一季新銳魔杖發表！<br>
+                由魔杖製造師希柯巴·沃爾夫創新研發設計的新冠系列，<br>以影響全球新冠病毒作為設計參考，讓你擁有不輸疫情的強大魔杖！</h4>
+            <a href="store.html"><span></span>
+                <p>了解詳情</p>
+            </a>
         </div>
     </section>
-  <!-- 進一步選購 -->
+    <!-- 第二區塊 -->
+    <section class="indextwo">
+        <img class="indextwo_img" src="img/indextwo.png" alt="">
+        <div>
+            <h2>傳奇典藏 亙久不滅</h2>
+            <h4>想擁有傳奇人物使用過的強大魔杖嗎?<br>想與參與過史詩大戰的魔杖並肩作戰嗎?<br>不定期更新上架典藏魔杖收藏，了解魔杖與他過去的主人不凡的經歷。</h4>
+            <a href="about.html"><span></span>
+                <p>了解詳情</p>
+            </a>
+        </div>
+    </section>
+    <!-- 進一步選購 -->
     <section class="gotoshop">
         <h2>進一步選購</h2>
         <div class="toshopmaindiv">
             <ul class="gotoshopmain  owl-carousel owl-theme">
                 <li class="gotoshopitem item"><a href="store.html">
-                    <img src="img/gotoshop1.png" alt="">
-                    <div>
-                        <h3>特效魔杖</h3>
-                        <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
-                        <p>立即線上選購 ></p>
-                    </div>
-                </a></li>
+                        <img src="img/gotoshop1.png" alt="">
+                        <div>
+                            <h3>特效魔杖</h3>
+                            <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
+                            <p>立即線上選購 ></p>
+                        </div>
+                    </a></li>
                 <li class="gotoshopitem item"><a href="store.html">
-                    <img src="img/gotoshop2.png" alt="">
-                    <div>
-                        <h3>典藏魔杖</h3>
-                        <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
-                        <p>立即線上選購 ></p>
-                    </div>
-                </a></li>
+                        <img src="img/gotoshop2.png" alt="">
+                        <div>
+                            <h3>典藏魔杖</h3>
+                            <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
+                            <p>立即線上選購 ></p>
+                        </div>
+                    </a></li>
                 <li class="gotoshopitem item"><a href="store.html">
-                    <img src="img/gotoshop3.png" alt="">
-                    <div>
-                        <h3>寶石魔杖</h3>
-                        <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
-                        <p>立即線上選購 ></p>
-                    </div>
-                </a></li>
+                        <img src="img/gotoshop3.png" alt="">
+                        <div>
+                            <h3>寶石魔杖</h3>
+                            <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
+                            <p>立即線上選購 ></p>
+                        </div>
+                    </a></li>
                 <li class="gotoshopitem item"><a href="faq.html">
-                    <img src="img/gotoshop4.png" alt="">
-                    <div>
-                        <h3>訂製魔杖</h3>
-                        <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
-                        <p>立即線上選購 ></p>
-                    </div>
-                </a></li>
+                        <img src="img/gotoshop4.png" alt="">
+                        <div>
+                            <h3>訂製魔杖</h3>
+                            <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
+                            <p>立即線上選購 ></p>
+                        </div>
+                    </a></li>
                 <li class="gotoshopitem item"><a href="store.html">
-                    <img src="img/gotoshop1.png" alt="">
-                    <div>
-                        <h3>特效魔杖</h3>
-                        <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
-                        <p>立即線上選購 ></p>
-                    </div>
-                </a></li>
+                        <img src="img/gotoshop1.png" alt="">
+                        <div>
+                            <h3>特效魔杖</h3>
+                            <p>讓每次施咒都光芒四射<br>讓每個巫術都不再平平無奇<br>讓完美的魔咒更錦上添花<br>讓失敗的咒語不再沉默尷尬</p>
+                            <p>立即線上選購 ></p>
+                        </div>
+                    </a></li>
                 <li class="gotoshopitem item"><a href="store.html">
-                    <img src="img/gotoshop2.png" alt="">
-                    <div>
-                        <h3>典藏魔杖</h3>
-                        <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
-                        <p>立即線上選購 ></p>
-                    </div>
-                </a></li>
+                        <img src="img/gotoshop2.png" alt="">
+                        <div>
+                            <h3>典藏魔杖</h3>
+                            <p>古劍蒙塵仍顯銳利<br>擁有亙古經歷的優異魔杖<br>正等待有緣人拾起<br>再度創造不朽歷史</p>
+                            <p>立即線上選購 ></p>
+                        </div>
+                    </a></li>
                 <li class="gotoshopitem item"><a href="store.html">
-                    <img src="img/gotoshop3.png" alt="">
-                    <div>
-                        <h3>寶石魔杖</h3>
-                        <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
-                        <p>立即線上選購 ></p>
-                    </div>
-                </a></li>
+                        <img src="img/gotoshop3.png" alt="">
+                        <div>
+                            <h3>寶石魔杖</h3>
+                            <p>細緻刻劃的權杖魔杖<br>鑲嵌珍稀寶石<br>每一次的吟唱都是<br>尊貴地位與財富的象徵</p>
+                            <p>立即線上選購 ></p>
+                        </div>
+                    </a></li>
                 <li class="gotoshopitem item"><a href="faq.html">
-                    <img src="img/gotoshop4.png" alt="">
-                    <div>
-                        <h3>訂製魔杖</h3>
-                        <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
-                        <p>立即線上選購 ></p>
-                    </div>
-                </a></li>
+                        <img src="img/gotoshop4.png" alt="">
+                        <div>
+                            <h3>訂製魔杖</h3>
+                            <p>擁有珍稀材料<br>具備自我設計想法<br>想和製造師交流需求<br>請來信說明</p>
+                            <p>立即線上選購 ></p>
+                        </div>
+                    </a></li>
             </ul>
 
             <!-- 沒OWL的自設選購箭頭 -->
@@ -143,81 +152,55 @@
                 <img src="img/b_arr.svg" alt="">
             </button> -->
         </div>
-    </section >
- <!-- loading -->
+    </section>
+    <!-- loading -->
     <div class="loadingblock">
         <img src="img/loading.svg" alt="">
         <p>Loading...</p>
     </div>
-  <!-- 底端footer -->
+    <!-- 底端footer -->
     <footer class="bottom">
         <h2>服務據點</h2>
         <ul class="serverpoint">
-            <li><div>
-                <p>台灣分部</p>
-                <p>台北市台北車站</p>
-                <p>交通資訊：<br>位於台北車站大廳東北側第六塊磁磚位置之柱面<br><br>營業時間： 台北時間<br>周一至周五上午2:00~上午5:00</p>
-            </div></li>
-            <li><div>
-                <p>日本分部</p>
-                <p>東京都東京車站</p>
-                <p>交通資訊：<br>位於東京車站大廳正西側第三塊磁磚位置之牆面<br><br>營業時間： 東京時間<br>周一至週五上午1:00~上午4:00</p>
-            </div></li>
-            <li><div>
-                <p>韓國分部</p>
-                <p>首爾特別市首爾站</p>
-                <p>交通資訊：<br>位於首爾站大廳東南側第十七塊磁磚位置之牆面<br><br>營業時間： 首爾時間<br>周一至週五上午1:00~上午4:00</p>
-            </div></li>
+            <li>
+                <div>
+                    <p>台灣分部</p>
+                    <p>台北市<br>台北車站</p>
+                    <p>交通資訊：<br>台北車站大廳<br>東北側第6塊磁磚柱面<br><br>台北時間<br>平日上午2:00~5:00</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <p>日本分部</p>
+                    <p>東京都<br>東京車站</p>
+                    <p>交通資訊：<br>東京車站大廳<br>正西側第3塊磁磚牆面<br><br>東京時間<br>平日上午1:00~4:00</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <p>韓國分部</p>
+                    <p>首爾特別市<br>首爾站</p>
+                    <p>交通資訊：<br>首爾站大廳<br>東南側第17塊磁磚牆面<br><br>首爾時間<br>平日上午1:00~4:00</p>
+                </div>
+            </li>
         </ul>
-      <!-- back to top -->
+        <!-- back to top -->
         <a class="gototopbtn float" href="#">
             <img src="img/logo_ca_s.svg" alt="">
             <img src="img/uparr.png" alt="">
             <P>BACK TO TOP</P>
-        <a>
-        <P class="tibame">本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，僅供學習、展示之用。</P>
+            <a>
+                <P class="tibame">本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，僅供學習、展示之用。</P>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="js/all.js"></script>
+    <script src="js/index.js"></script>
+
     <script>
-        // =========可惡的輪播owl套件=========
-$('.owl-carousel').owlCarousel({
-    loop:false,
-    margin:40,
-    nav:true,
-    dots:false,
-    responsive:{
-        0:{
-            items:1
-        },
-        576:{
-            items:2
-        },
-        992:{
-            items:3
-        },
-        1600:{
-            items:4
-        },
-        2100:{
-            items:5
-        }
-    }
-})
-document.addEventListener("scroll", function(){
-    if(window.scrollY >= 100 && window.scrollY <300){
-        $(".indexone img").addClass("rightslide")
-    }else if(window.scrollY >= 300){
-        $(".indextwo img").addClass("leftslide")
-    }else{
-        $(".indextwo img").removeClass("leftslide")
-        $(".indexone img").removeClass("rightslide")
-    }
-})
+  
     </script>
 </body>
+
 </html>
